2011-11-20  Dodji Seketeli  <dodji@redhat.com>

	PR c++/51194
	* pt.c (lookup_template_class_1): Go out early if the type of the
	template is error_mark_node.

2011-11-19  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51216
	* semantics.c (potential_constant_expression_1): Handle IF_STMT,
	DO_STMT, FOR_STMT, and WHILE_STMT.

2011-11-18  Fabien Chêne  <fabien@gcc.gnu.org>

	PR c++/51188
	* search.c (lookup_field_1): Handle USING_DECLs for the storted
	case.

2011-11-18  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51150
	* pt.c (tsubst_copy_and_build): Handle FIX_TRUNC_EXPR.

2011-11-18  Dodji Seketeli  <dodji@redhat.com>

	PR c++/51191
	* pt.c (primary_template_instantiation_p): Don't forget to
	consider alias declarations.

2011-11-17  Jason Merrill  <jason@redhat.com>

	PR c++/51186
	* decl.c (grokdeclarator): Improve C++98 trailing return diagnostic.

	N3203
	* class.c (add_implicitly_declared_members): Update move
	conditions.

	PR c++/51137
	* class.c (build_base_path): Don't do calculation in templates.

2011-11-15  Torvald Riegel  <triegel@redhat.com>

	* parser.c (cp_parser_transaction_expression): Require parentheses
	when parsing transaction expressions.

2011-11-14  Ed Smith-Rowland  <3dw4rd@verizon.net>

	PR c++/51107
	* typeck.c (check_literal_operator_args): Add processing_specialization
	to check for void template fn. Test for exact arity for non-template fn.

2011-11-14  Fabien Chêne  <fabien@gcc.gnu.org>

	PR c++/6936
	PR c++/25994
	PR c++/26256
	PR c++/30195
	* search.c (lookup_field_1): Look through USING_DECL.
	(lookup_field_r): Call lookup_fnfields_slot instead of
	lookup_fnfields_1.
	* semantics.c (finish_member_declaration): Remove the check that
	prevents USING_DECLs from being verified by
	pushdecl_class_level. Call add_method for using declarations that
	designates functions if the using declaration is in a template
	class. Set DECL_IGNORED_P on class-scope using declarations.