@@ -5501,7 +5501,7 @@ unify_inconsistency (bool explain_p, tree parm, tree first, tree second)
 {
   if (explain_p)
     inform (input_location,
-	    "  deduced conflicting types for parameter %qT (%qT and %qT)",
+	    "  conflicting deductions for parameter %qE (%qE and %qE)",
 	    parm, first, second);
   return 1;
 }
