@@ -1,3 +1,9 @@
+2011-11-20  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/51230
+	* pt.c (unify_inconsistency): Handle non-type parameters better.
+	* error.c (dump_expr): Handle TEMPLATE_TEMPLATE_PARM.
+
 2011-11-20  Dodji Seketeli  <dodji@redhat.com>
 
 	PR c++/51194
